# OpenBESS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: finance_assumptions.yaml  phase2_smoke.yaml  reference_assets.yaml  scenarios_cm.yaml  solver_highs.yaml
dashboard/: __init__.py  cache_reader.py  streamlit_app.py
data/reference/: capacity_market_scenarios.csv  eac_product_map.yaml
docs/: README.md  assumptions_ledger.md  commercial_bess_assumptions.md  dashboard_cache_contract.md  data_sources.md  demo_walkthrough.md  finance_boundaries.md  implementation_conventions.md  interview_demo_script.md  known_limitations.md  methodology.md  model_boundaries.md  openbess_reference_revenue_stack.md  openbess_stack_index.md  phase_1_plan.md  phase_4_plan.md  phase_5_plan.md  product_plan.md  product_plan_full.md  quality_gates.md  release_checklist.md  release_notes_v0.1.0.md  release_notes_v0.1.1.md  release_notes_v0.1.2.md  reproducibility.md  residential_bess_assumptions.md  residential_public_data_sources.md  service_boundary_ledger.md  source_registry.yaml  source_research_notes.md  strategic_positioning.md  validation_memo.md
docs/adr/: README.md
docs/phase_reviews/: README.md  p1_00_source_feasibility.md  phase_1_review.md  phase_2_5_review.md  phase_2_review.md  phase_3_review.md  phase_4_review.md  phase_5_review.md  phase_6_review.md
reports/phase_2_5_rolling_slice/: phase_2_5_policy_report.md
reports/phase_2_baseline/: historical_sample_summary.json  phase_2_baseline_method.md
reports/phase_3_eac_availability/: phase_3_eac_availability_report.md
src/gb_bess_revenue_stack/: cli.py  (+1 more)
(+111 files in other folders)
