[project]
name = "gb-bess-revenue-stack"
version = "0.1.2"
description = "Public-data GB BESS revenue-stack modelling and OpenBESS Stack Index preview."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "tenacity>=8.2",
  "typer>=0.12",
]

[project.optional-dependencies]
optimisation = [
  "highspy>=1.7",
  "pyomo>=6.7",
]
dashboard = [
  "plotly>=5.22",
  "streamlit>=1.35",
]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
gb-bess = "gb_bess_revenue_stack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gb_bess_revenue_stack"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "integration: tests that call live external services",
  "unit: network-free unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
exclude = ["tests/fixtures"]

[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*", "pyomo.*"]
ignore_missing_imports = true
